--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,29 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <style>
-            .error {
-                color: red;
-            }
-        </style>
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block content %}
     <h1>Signup Here</h1>
-        <form method="POST">
-            <table>
-                <tr>
-                    <td><label for="username">Username</label></td>
-                    <td>
-                        <input name="username" type="text" value="">
-                        <span class="error"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td><label for="password">Password</label></td>
-                    <td>
-                        <input name="password" type="password">
-                        <span class="error"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td><label for="verify">Verify Password</label></td>
-                    <td>
-                        <input name="verify" type="password">
-                        <span class="error"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td><label for="email">Email (optional)</label></td>
-                    <td>
-                        <input name="email" type="email" value="">
-                        <span class="error"></span>
-                    </td>
-                </tr>
-            </table>
-            <input type="submit">
-        </form>
-    </body>
-</html>
+    <form method='POST'>
+        <table>
+            <tr>
+                <td><label for ="username">Username</label></td>
+                <td><input name="username" type="text" value='{{username}}' />
+                <span class="error">{{username_error}}</span></td>
+            </tr>
+            <tr>
+                <td><label for = password>Password</label></td>
+                <td><input name="password" type="password" value='{{password}}' />
+                <span class="error">{{password_error}}</span></td>
+            </tr>
+            <tr>
+                <td><label for = password>Verify Password</label></td>
+                <td><input name="verifypassword" type="password" value='{{verifypassword}}' />
+                <span class="error">{{verifypassword_error}}</span></td>
+            </tr>
+            <tr>
+            <td><label for = email>Email (optional)</label></td>
+            <td><input name="email" type="text" value='{{email}}' />
+            <span class="error">{{email_error}}</span></td>
+            </tr>
+        </table>
+        <input type="submit" value="Submit" />
+    </form>
+{% endblock %}
